---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: ????
  Bugfixes:
    - Removed technology slot clicked debug logging
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2022-12-20
  Features:
    - Initial release